--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "hooks:install": "lefthook install",
+    "hooks:uninstall": "lefthook uninstall"
   },
   "dependencies": {
     "next": "15.5.6",
@@ -22,6 +24,7 @@
     "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "lefthook": "^2.0.0",
     "tailwindcss": "^4.1.15",
     "typescript": "^5.9.3"
   }
