feat(build): ✨ complete Next.js 16 upgrade compatibility
- Remove --turbopack flags from scripts (now default in v16)
- Add required default.tsx files for parallel routes (@analytics, @team)
- Maintain backward compatibility with existing async params pattern
- All routes and configuration already Next.js 16 compatible

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "dev:safe": "rm -rf .next && next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "dev:safe": "rm -rf .next && next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
