feat(tooling): ✨ implement all Biome recipes for enhanced code quality
- Add Renovate configuration with customManagers:biomeVersions preset
- Optimize Lefthook pre-commit hooks with combined biome check --write
- Add GitHub Actions workflow for CI/CD with official Biome action
- Add Biome badges to README for project visibility
- Update biome.json schema URL for Renovate auto-updates
- Enhanced package.json scripts with proper error handling flags

This implements all 4 Biome recipes: Git Hooks, Renovate, CI, and Social Badges

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,19 +1,14 @@
 pre-commit:
   parallel: true
   commands:
-    lint:
-      glob: "*.{js,jsx,ts,tsx,json,css,md}"
-      run: pnpm lint
+    biome-check:
+      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
+      run: npx @biomejs/biome check --write --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
       stage_fixed: true
 
     type-check:
       glob: "*.{ts,tsx}"
       run: pnpm type-check
-
-    format:
-      glob: "*.{js,jsx,ts,tsx,json,css,md}"
-      run: pnpm format
-      stage_fixed: true
 
 pre-push:
   commands:
