--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev:safe": "rm -rf .next && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "biome check",
-    "format": "biome format --write",
+    "lint": "biome check --no-errors-on-unmatched",
+    "lint:fix": "biome check --write --no-errors-on-unmatched",
+    "format": "biome format --write --no-errors-on-unmatched",
     "type-check": "tsc --noEmit",
     "hooks:install": "lefthook install",
     "hooks:uninstall": "lefthook uninstall"
