--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextjs-demo",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "dev:safe": "rm -rf .next && next dev",
